tests/baselines/reference/arrayAssignmentTest6.errors.txt
arrayAssignmentTest6.ts(16,13): error TS2322: Type 'null' is not assignable to type 'ILineTokens'.


==== arrayAssignmentTest6.ts (1 errors) ====
    namespace Test {
        interface IState {
        }
        interface IToken {
            startIndex: number;
        }
        interface ILineTokens {
            tokens: IToken[];
            endState: IState;
        }
        interface IMode {
            tokenize(line:string, state:IState, includeStates:boolean):ILineTokens;
        }
        export class Bug implements IMode {
            public tokenize(line:string, tokens:IToken[], includeStates:boolean):ILineTokens {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'ILineTokens'.
            }
        }    
    }
    